Improve directory listing config, fix various and update doc